--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ header {
 }
 nav {
     background-color: #cc99a1;
-    padding-bottom: 100;
+    padding-bottom: 10px;
     padding-left: 35px;
     padding-top: 10px;
     
