--- a/Week9/style-stage-5.css
+++ b/Week9/style-stage-5.css
@@ -53,7 +53,10 @@ li {
     
 
 }
-
+img {
+    text-align: center;
+    position: relative;
+}
 article {
     background-color: #faf5f0;
     padding-bottom: 20px;
