--- a/Week10/CSS/styles.css
+++ b/Week10/CSS/styles.css
@@ -98,6 +98,7 @@ nav li {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
+    overflow: hidden;
     
     min-width: 160px;
     height: 240px;
